--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,8 @@
                             <goal>process-asciidoc</goal>
                         </goals>
                         <configuration>
-                            <backend>html</backend>
+                            <backend>html5</backend>
+                            <sourceHighlighter>coderay</sourceHighlighter>
                         </configuration>
                     </execution>
                     <execution>
@@ -33,13 +34,13 @@
                         </goals>
                         <configuration>
                             <backend>pdf</backend>
+                            <sourceHighlighter>coderay</sourceHighlighter>
                         </configuration>
                     </execution>
                 </executions>
                 <configuration>
                     <sourceDirectory>src/main/doc</sourceDirectory>
                     <outputDirectory>target/docs</outputDirectory>
-                    <!--                    <backend>pdf</backend>-->
                 </configuration>
                 <dependencies>
                     <dependency>
